--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,34 @@
-
-name: Build InvestAi APK
+name: Flutter Build
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.32.8"
+          flutter-version: '3.24.0'
 
-      - name: Flutter version
-        run: flutter --version
-
-      - name: Create Android platform via flutter create (fresh Gradle)
-        run: |
-          mkdir -p tmp_proj
-          flutter create tmp_proj --org com.investai --project-name investai
-          rm -rf android
-          mv tmp_proj/android ./android
-          rm -rf tmp_proj
-
-      - name: Get packages
+      - name: Install dependencies
         run: flutter pub get
 
-      - name: Build APK (release)
-        run: flutter build apk --release --dart-define=NOWPAY_API_KEY=${{ secrets.NOWPAY_API_KEY }}
+      - name: Build APK
+        run: flutter build apk --release
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: investai-apk
+          name: app-release.apk
           path: build/app/outputs/flutter-apk/app-release.apk
